--- a/scss/components/_noticias.scss
+++ b/scss/components/_noticias.scss
@@ -9,7 +9,7 @@
         padding-top: 10px;
         padding-left: 0px;
         li{
-            background-color: #ffffbf;
+            background-color: whitesmoke;
             width: min-content;
             border: 5px solid #ffffbf;
             a{
