--- a/scss/components/_noticias.scss
+++ b/scss/components/_noticias.scss
@@ -9,7 +9,7 @@
         padding-top: 10px;
         padding-left: 0px;
         li{
-            background-color: whitesmoke;
+            background-color: white;
             width: min-content;
             border: 5px solid #ffffbf;
             a{
@@ -64,7 +64,7 @@
             padding-top: 10px;
             padding-left: 0px;
             li{
-                background-color: #ffffbf;
+                background-color: white;
                 width: min-content;
                 border: 5px solid #ffffbf;
                 a{
@@ -98,7 +98,7 @@
             justify-content: space-around;
             padding-top: 10px;
             li{
-                background-color: #ffffbf;
+                background-color: white;
                 width: min-content;
                 border: 5px solid #ffffbf;
                 a{
