--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -145,8 +145,14 @@
             justify-content: center;
         }
 
+        .partidos{
+            display: flex;
+            justify-content: center;
+        }
         .carousel-partidos{
-            width: 100%;
+            display: flex;
+            justify-content: center;
+            width: 80%;
             height: max-content;
         }
 
@@ -248,7 +254,7 @@
 }
 
 /*Tablet Horizontal*/
-@media only screen and (min-width: 900px){
+@media only screen and (min-width: 1024px) and (max-width: 1200px){
     .container-inicio{
         display: grid;
         grid-template-areas: 
@@ -260,17 +266,19 @@
 
         .partidos{
             display: flex;
-            justify-content: start;
+            justify-content: center;
+            width: 90%;
         }
         .carousel-partidos{
             display: flex;
-            width: 100%;
+            width: 80%;
             height: max-content;
             padding-left: 15px;
             padding-bottom: 20px;
         }
         .video{
             padding-left: 5px;
+            width: 90%;
         }
         .carousel-noticias{
             width: 610px;
