--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ body {
 .container-noticias ul li {
   background-color: white;
   width: min-content;
-  border: 5px solid #ffffbf;
+  border: 5px solid #f6f6f6;
 }
 .container-noticias ul li a {
   text-decoration: none;
@@ -1070,7 +1070,7 @@ body {
   .container-noticias ul li {
     background-color: white;
     width: min-content;
-    border: 5px solid #ffffbf;
+    border: 5px solid #f6f6f6;
   }
   .container-noticias ul li a {
     text-decoration: none;
@@ -1099,11 +1099,12 @@ body {
   }
   .container-noticias ul li {
     background-color: white;
-    width: min-content;
-    border: 5px solid #ffffbf;
+    width: 350px;
+    border: 5px solid #f6f6f6;
   }
   .container-noticias ul li a {
     text-decoration: none;
+    width: fit-content;
   }
   .container-noticias ul li a p {
     color: black;
@@ -1114,6 +1115,12 @@ body {
     justify-content: center;
     font-family: "Lato", sans-serif;
     padding-top: 8px;
+    padding-left: 3px;
+    width: 100%;
+  }
+  .container-noticias ul li a img {
+    width: 100%;
+    height: 70%;
   }
 }
 /*Tablet Vertical*/
