--- a/scss/components/_noticias.scss
+++ b/scss/components/_noticias.scss
@@ -11,7 +11,7 @@
         li{
             background-color: white;
             width: min-content;
-            border: 5px solid #ffffbf;
+            border: 5px solid #f6f6f6;
             a{
                 text-decoration: none;
                 p{
@@ -66,7 +66,7 @@
             li{
                 background-color: white;
                 width: min-content;
-                border: 5px solid #ffffbf;
+                border: 5px solid #f6f6f6;
                 a{
                     text-decoration: none;
                     p{
@@ -99,10 +99,11 @@
             padding-top: 10px;
             li{
                 background-color: white;
-                width: min-content;
-                border: 5px solid #ffffbf;
+                width: 350px;
+                border: 5px solid #f6f6f6;
                 a{
                     text-decoration: none;
+                    width: fit-content;
                     p{
                     color: black;
                     font-weight: bold;
@@ -112,6 +113,12 @@
                     justify-content: center;
                     font-family: 'Lato', sans-serif;
                     padding-top: 8px;
+                    padding-left: 3px;
+                    width: 100%;
+                    }
+                    img{
+                        width: 100%;
+                        height: 70%;
                     }
                 }
                 
