--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -27,6 +27,12 @@
     padding-left: 40px;
 
     /*Partidos del dia*/
+    .partidos{
+        display: flex;
+        justify-content: center;
+        width: 90%;
+        padding-left: 65px;
+    }
     .carousel-partidos{
         grid-area: partidos;
         width: 500px;
@@ -126,7 +132,7 @@
 /*Celular Vertical*/
 @media only screen and (max-width: 480px){
     body{
-        background-color: #416787;
+        background-color: $bg-color-general;
     }
     .container-inicio{
         display: grid;
@@ -143,11 +149,18 @@
             padding-top: 20px;
             display: flex;
             justify-content: center;
+            iframe{
+                width: 90%;
+                display: flex;
+                justify-content: center;
+            }
         }
 
         .partidos{
             display: flex;
             justify-content: center;
+            width: 100%;
+            padding-left: 0px;
         }
         .carousel-partidos{
             display: flex;
@@ -183,7 +196,7 @@
                 border-width: 2px;
                 border-radius: 9999px;
                 border-color: yellow;
-                font-size: 10px;
+                font-size: 12px;
                 font-weight: 700;
                 text-decoration: none;
                 color:black;
@@ -201,7 +214,7 @@
 /*Celular Horizontal*/
 @media only screen and (max-width: 932px) and (max-height:431px){
     body{
-        background-color:#416787;
+        background-color: $bg-color-general;
     }
 
     .container-inicio{
