--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -291,7 +291,13 @@
         }
         .video{
             padding-left: 5px;
-            width: 90%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            iframe{
+                display: flex;
+                justify-content: center;
+            }
         }
         .carousel-noticias{
             width: 610px;
